# clrgen

./: Cargo.toml  README.md  clrgen.toml  install.sh
colors/: dracula  night_rice
src/: common.rs  gen.rs  main.rs
templates/: alacritty.yml  eww.scss  i3config  kitty.conf  sway  waybar.css
