[package]
name = "clrgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "string"] }
toml = {version = "0.8.8"}
serde = {version = "1.0.93"}
serde_derive = {version = "1.0.93"}